# skchange

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  NOTES.md  README.md  pyproject.toml  requirements-test.txt  setup.cfg
.github/: release-drafter.yml
.github/workflows/: lint.yml  release-drafter.yml  release.yaml  release.yml  test.yml  test_release_drafter.yml  tests.yaml
build_tools/: check_install_from_test_pypi.sh  fail_on_missing_init_files.sh  make_release.py
docs/: Makefile
docs/source/: api_reference.rst  conf.py  index.rst  releases.rst  user_guide.rst
extension_templates/: change_score.py  cost.py
interactive/: benchmark.py  calibration_demo.ipynb  compare_detector_outputs.py  explore_ESAC.py  explore_best_fit_continuous_linear_trend_score.py  explore_binseg.py  explore_capa.py  explore_circular_binseg.py  explore_continuous_linear_trend_cost.py  explore_crops.py  explore_edf_cost_with_pelt.py  explore_evaluators.py  explore_moscore.py  explore_moscore_anomaly.py  explore_mosum.py  explore_new_costs.py  explore_pelt.py  explore_pelt_2.py  explore_pelt_with_jump.py  explore_seeded_binseg.py  explore_sklearn_compat.py  explore_stat_threshold_anomaliser.py  first_exploration_of_multivariate_t_fitting.py  multivariate_t_fitting.py  test_multivariate_t_fitting.py  testing_numba_make_funcs.py
skchange/: __init__.py  base.py  config.py  exceptions.py
skchange/anomaly_detectors/: __init__.py  _anomalisers.py  _capa.py  _circular_binseg.py  _mvcapa.py  anomalisers.py  base.py  capa.py  circular_binseg.py  moscore_anomaly.py  mvcapa.py  utils.py
skchange/anomaly_scores/: __init__.py  _from_cost.py  _l2_saving.py  base.py  cost_based.py  from_cost.py  l2_saving.py  utils.py
skchange/anomaly_scores.py/: savings.py
skchange/base/: __init__.py  _base_detector.py  _base_interval_scorer.py  base_detector.py  base_interval_evaluator.py  base_interval_scorer.py
skchange/change_detectors/: __init__.py  _crops.py  _moving_window.py  _pelt.py  _seeded_binseg.py  base.py  binary_segmentation.py  explore_pelt.py  moscore.py  mosum.py  moving_window.py  pelt.py  seeded_binseg.py  utils.py
skchange/change_scores/: __init__.py  _continuous_linear_trend_score.py  _cusum.py  _esac_score.py  _from_cost.py  _linear_trend_score.py  _multivariate_gaussian_score.py  _rank_score.py  _test_best_fit_continuous_linear_trend_score.py  base.py  cost_based.py  cusum.py  from_cost.py  gaussian_cov_score.py  multivariate_gaussian_score.py  utils.py
skchange/compose/: __init__.py  penalised_score.py
skchange/costs/: __init__.py  _continuous_linear_trend_cost.py  _empirical_distribution_cost.py  _gaussian_cost.py  _l1_cost.py  _l2_cost.py  _laplace_cost.py  _linear_regression_cost.py  _linear_trend_cost.py  _multivariate_gaussian_cost.py  _multivariate_t_cost.py  _poisson_cost.py  _rank_cost.py  base.py  cost_factory.py  gaussian_cost.py  gaussian_cov_cost.py  gaussian_var_cost.py  l1_cost.py  l2_cost.py  laplace_cost.py  linear_regression_cost.py  mean_cost.py  mean_cov_cost.py  mean_saving.py  multivariate_gaussian_cost.py  multivariate_t_cost.py  poisson_cost.py  (+2 more)
skchange/new_api/: DESIGN_SUMMARY.md  MIGRATION_GUIDE.md  __init__.py  base.py  conftest.py  detectors.py  examples.py  examples_metrics.py  examples_y_parameter.py  metrics.py  model_selection.py  pyproject.toml  scorers.py  template_detector.py  test_pattern.py  types.py  typing.py  utils.py
skchange/new_api/calibration/: __init__.py  _calibrate.py  _calibrated_detector.py  _null_models.py
skchange/new_api/calibration/tests/: test_calibrate.py  test_calibrated_detector.py  test_null_models.py
skchange/new_api/datasets/: __init__.py  _data_loaders.py  _generate.py  _generate_linear_trend.py  _generate_normal.py  _generate_regression.py  _utils.py
skchange/new_api/datasets/tests/: test_data_loaders.py  test_generate.py  test_generate_linear_trend.py  test_generate_normal.py  test_generate_regression.py
skchange/new_api/detectors/: __init__.py  _base.py  _capa.py  _circular_binseg.py  _crops.py  _moving_window.py  _pelt.py  _seeded_binseg.py
skchange/new_api/detectors/tests/: _registry.py  test_all.py  test_base.py  test_crops.py  test_penalty_scale.py
skchange/new_api/interval_scorers/: __init__.py  _base.py  _from_cost.py  _penalised_score.py
skchange/new_api/interval_scorers/_change_scores/: __init__.py  continuous_linear_trend_score.py  cusum.py  esac_score.py  multivariate_gaussian_score.py  rank_score.py
skchange/new_api/interval_scorers/_costs/: __init__.py  edf_cost.py  gaussian_cost.py  l1_cost.py  l2_cost.py  laplace_cost.py  linear_regression_cost.py  linear_trend_cost.py  multivariate_gaussian_cost.py  multivariate_t_cost.py  poisson_cost.py  rank_cost.py
skchange/new_api/interval_scorers/_savings/: __init__.py  _l2_saving.py  _utils.py  edf_saving.py  gaussian_saving.py  l1_saving.py  l2_saving.py  laplace_saving.py  linear_regression_saving.py  linear_trend_saving.py  multivariate_gaussian_saving.py  multivariate_t_saving.py  poisson_saving.py
skchange/new_api/interval_scorers/_transient_scores/: __init__.py  l2_transient_score.py
skchange/new_api/interval_scorers/tests/: _registry.py  test_all.py  test_base.py  test_esac_score.py  test_gaussian_saving.py  test_l1_saving.py  test_l2_saving.py  test_laplace_saving.py  test_linear_regression_saving.py  test_linear_trend_saving.py  test_multivariate_gaussian_saving.py  test_multivariate_t_cost.py  test_multivariate_t_saving.py  test_poisson_saving.py  test_saving_utils.py
skchange/new_api/metrics/: __init__.py  _changepoint.py  _segment_anomaly.py  _segment_label.py
skchange/new_api/metrics/tests/: _registry.py  test_all.py
skchange/new_api/penalties/: __init__.py  _constant.py  _linear.py  _nonlinear.py
skchange/new_api/tests/: __init__.py  test_all.py  test_sklearn_compatibility.py  test_validation.py
skchange/new_api/utils/: __init__.py  _conversion.py  _numba.py  _numeric.py  _param_validation.py  _tags.py  segmentation.py  validation.py
skchange/new_api/utils/_numba/: __init__.py  _helpers.py
(+192 files in other folders)
