[project]
name = "skchange"
version = "0.2.0"
description = "Sktime-compatible change and anomaly detection"
authors = [
    {name = "Martin Tveten", email = "tveten@nr.no"},
]
maintainers = [
    {name = "Martin Tveten", email = "tveten@nr.no"},
]
readme = "README.md"
keywords = [
    "data-science",
    "machine-learning",
    "statistics",
    "scikit-learn",
    "time-series",
    "change-detection",
    "anomaly-detection",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Scientists/Engineers",
    "License :: BSD License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8,<3.13"
dependencies = [
  "numpy<1.27,>=1.21",  # required for framework layer and base class logic
  "pandas<2.2.0,>=1.3",  # pandas is the main in-memory data container
  "numba>=0.56",  # numba is used for fast computation throughout
  "sktime>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/NorskRegnesentral/skchange"

[project.optional-dependencies]
# all_extras - all soft dependencies, install via "pip install skchange[all_extras]"
all_extras = [
  "optuna>=3.1.1",
  "plotly>=5.13.0",
]

# dev - the developer dependency set, install via "pip install skchange[dev]"
dev = [
    "black",
    "pre-commit",
    "pytest",
    "pytest-cov",
]


[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>61"]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.black]
line-length = 88
