[aliases]
test = pytest

[tool:pytest]
# ignore certain folders and pytest warnings
addopts =
    --ignore build_tools
    --ignore interactive
    --ignore docs
    # Show extra info on tests that pass, even though they shouldn't:
    -rX
    # --doctest-modules
    # --durations 20
    # --timeout 600
    # --cov sktime
    # --cov-report xml
    # --cov-report html
    # --showlocals
    # --matrixdesign True
    # --only_changed_modules True
    # -n auto
filterwarnings =
    ignore::UserWarning
    ignore:numpy.dtype size changed
    ignore:numpy.ufunc size changed

[metadata]
description_file = README.md
long_description_content_type = text/markdown

[check-manifest]
ignore =
    # .binder/**
    # .all-contributorsrc
    # .coveragerc
    # examples/**
    build_tools/**
    # __check_build/**
    # docs/**
    # Makefile
    # CODEOWNERS
    # CONTRIBUTING.md
    # *.yaml
    # *.yml
